--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,7 @@ dependencies {
 
     //coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0"
 
     //Room
     implementation("androidx.room:room-runtime:$roomVersion")
@@ -75,5 +76,7 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     testImplementation "org.mockito:mockito-core:3.12.1"
     testImplementation "org.mockito:mockito-inline:2.8.47"
+    testImplementation 'app.cash.turbine:turbine:0.7.0'
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.0"
 
 }
